Draft implementation of custom images on nodes (see feature request number 2395).
git-svn-id: http://chianti.ucsd.edu/svn@22486 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
@@ -33,7 +33,7 @@
                         size: { defaultValue: 20, continuousMapper: { attrName: "weight",  minValue: 20, maxValue: 40 } },
                         borderWidth: 2,
                         borderColor: "#707070",
-                        image: "http://upload.wikimedia.org/wikipedia/commons/2/2a/Wikipe-tan_in_navy_uniform2_transparent.png",//"http://chart.apis.google.com/chart?chs=300x300&cht=p&chd=e0:U-gh..bR",
+                        image: "http://chart.apis.google.com/chart?chs=300x300&cht=p&chd=e0:U-gh..bR",
                         labelFontSize: { defaultValue: 12, continuousMapper: { attrName: "weight",  minValue: 10, maxValue: 24 } },
                         tooltipText: { customMapper: { functionName: "onNodeTooltip" } },
                         selectionGlowOpacity: 0,
