--- a/new_cytoscape_website/trunk/tumblr.html
+++ b/new_cytoscape_website/trunk/tumblr.html
@@ -6,6 +6,7 @@
 <title>Latest News</title>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load("jquery", "1.3");</script>
+<script type="text/javascript" src="http://www.cytoscape.org/js/global_variables.js"></script>
 <script type="text/javascript" src="http://www.cytoscape.org/js/menu_generator.js"></script>
 </head>
 
