--- a/new_cytoscape_website/trunk/screenshots.html
+++ b/new_cytoscape_website/trunk/screenshots.html
@@ -14,6 +14,8 @@
 src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+
+<script type="text/javascript" src="js/global_variables.js"></script>
 <script type="text/javascript" src="js/menu_generator.js"></script>
 <script type="text/javascript" src="js/rss_feed.js"></script>
 <script type="text/javascript" src="js/jquery-galleryview-1.1/jquery.galleryview-1.1.js"></script>
