--- a/new_cytoscape_website/trunk/tumblr2.html
+++ b/new_cytoscape_website/trunk/tumblr2.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" 
 src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+<script type="text/javascript" src="http://www.cytoscape.org/js/global_variables.js"></script>
 <script type="text/javascript" src="http://www.cytoscape.org/js/menu_generator.js"></script>
 </head>
 
