--- a/new_cytoscape_website/trunk/what_is_cytoscape.html
+++ b/new_cytoscape_website/trunk/what_is_cytoscape.html
@@ -7,6 +7,8 @@
 <script type="text/javascript" 
 src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+
+<script type="text/javascript" src="js/global_variables.js"></script>
 <script type="text/javascript" src="js/menu_generator.js"></script>
 </head>
 
