Updated based on comments by Alex and Trey.
git-svn-id: http://chianti.ucsd.edu/svn@23850 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/documentation_users.html
+++ b/new_cytoscape_website/trunk/documentation_users.html
@@ -66,7 +66,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <div class="blockright"> <img src="images/icon/Gnome-Dialog-Question-64.png" />
       <h2>Getting Help</h2>
       <br />
-      <p> <strong>Still cannot find answer for your question?  Ask your question in the <a href="">mailing list</a>.</strong> </p>
+      <p> <strong>Still cannot find answer for your question?  Ask your question in the <a href="community.html">mailing list</a>.</strong> </p>
       <br />
       <div class="important">
         <h3>Tips for Asking Questions</h3>
