Broken link fixed.
git-svn-id: http://chianti.ucsd.edu/svn@23855 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/documentation_users.html
+++ b/new_cytoscape_website/trunk/documentation_users.html
@@ -34,7 +34,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       </ul>
       
       <h3>Sample Workflow in Paper</h3>
-      <p><a href="">Nature Protocols paper</a> by Cytoscape Consortium is available for a quick overview of Cytoscape functions.</p>
+      <p><a href="http://www.nature.com/nprot/journal/v2/n10/abs/nprot.2007.324.html">Nature Protocols paper</a> by Cytoscape Consortium is available for a quick overview of Cytoscape functions.</p>
     </div>
     <div class="blockright">
       <h2>User Documents</h2>
