--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
@@ -23,21 +23,21 @@
   <div id="nav">
     <div id="program" class="menu_item"><a href="program.html">
       <h3>Program <span class="lucida">&raquo;</span></h3>
-      <p>Schedule and list of speakers</p>
+      <p>Schedule...</p>
       </a>
     </div>
     <div id="travel" class="menu_item"><a href="travel.html">
       <h3>Travel Information <span class="lucida">&raquo;</span></h3>
-      <p>Flight informations, accomodations....</p>
+      <p>Location and lodging information...</p>
     </div>
     <div id="faq" class="menu_item"><a href="faq.html">
       <h3>FAQ<span class="lucida">&raquo;</span></h3>
-      <p>Frequently Asked Questions....</p>
+      <p>Frequently Asked Questions...</p>
       </a>
     </div>
     <div id="contact" class="menu_item_last"><a href="contact.html">
       <h3>Contact Us <span class="lucida">&raquo;</span></h3>
-      <p>Questions? Please contact us.</p>
+      <p>Contact information...</p>
     </div>
   </div>
   
