--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -40,6 +40,19 @@
 	<li><a href="http://www.ljshoreshotel.com/">The La Jolla Shores Hotel</a></li>
 	<li><a href="http://hdh.ucsd.edu/thevillage/">The Village</a> -- For guest accommodations on campus please <a href="https://hds.ucsd.edu/conference/GuestReg/guestinfo.aspx">click here</a>. Housing will be located at the newly opened Village at Torrey Pines East.  To make a reservation select the radio button "Conference" and type "Cytoscape Symposium" and proceed with the reservation.  Please view the Frequently Asked Questions for additional information or call 858-534-2142.</li>
 	</ul>
+  	<h3>Transportation</h3>
+	<ul>
+	<li>The La Jolla Shores Hotel will provide a shuttle to the retreat site.</li>
+	<li>You shouldn't need a car at the retreat.  We'll provide a continental 
+	 breakfast and boxed lunch on Thursday and Saturday.  There are also food
+	 options within walking distance of the retreat location.</li>
+	<li><b>From the Airport</b>
+	<ul>
+	<li>Airport shuttle...</li>
+	<li>Taxi (~ $30-$40)</li>
+	</ul>
+	</li>
+	</ul>
     
   </div>
   
