--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/contact.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/contact.html
@@ -21,8 +21,8 @@
       <h3>Travel Information <span class="lucida">&raquo;</span></h3>
       </a>
     </div>
-    <div id="faq" class="menu_item"><a href="faq.html">
-      <h3>FAQ<span class="lucida">&raquo;</span></h3>
+    <div id="register" class="menu_item"><a href="http://cytoscape2011.eventbrite.com">
+      <h3>Register<span class="lucida">&raquo;</span></h3>
       </a>
     </div>
     <div id="contact" class="menu_item_last"><a href="contact.html">
