--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
@@ -21,8 +21,8 @@
       <h3>Travel Information <span class="lucida">&raquo;</span></h3>
       </a>
     </div>
-    <div id="faq" class="menu_item"><a href="faq.html">
-      <h3>FAQ<span class="lucida">&raquo;</span></h3>
+    <div id="register" class="menu_item"><a href="http://cytoscape2011.eventbrite.com">
+      <h3>Register<span class="lucida">&raquo;</span></h3>
       </a>
     </div>
     <div id="contact" class="menu_item_last"><a href="contact.html">
@@ -48,7 +48,7 @@
 
 <h3>Friday, May 20</h3>
 <ul>
-<li>9am - 6:30pm - <a href="http://sdcsb.org/events/5th-annual-systems-to-synthesis-symposium">Systems and Synthesis Symposium</a> (Salk Institute, Fredric de Hoffman Auditorium)</li>
+<li>9am - 6:30pm - Systems To Synthesis Symposium (Salk Institute, Fredric de Hoffman Auditorium)</li>
 </ul>
 
 <h3>Saturday, May 21</h3>
