--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -21,8 +21,8 @@
       <h3>Travel Information <span class="lucida">&raquo;</span></h3>
       </a>
     </div>
-    <div id="faq" class="menu_item"><a href="faq.html">
-      <h3>FAQ<span class="lucida">&raquo;</span></h3>
+    <div id="register" class="menu_item"><a href="http://cytoscape2011.eventbrite.com">
+      <h3>Register<span class="lucida">&raquo;</span></h3>
       </a>
     </div>
     <div id="contact" class="menu_item_last"><a href="contact.html">
@@ -36,10 +36,19 @@
 <iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=210032451350085210978.00049c59aa4d926ced4b2&amp;ll=32.873244,-117.249184&amp;spn=0.069203,0.109863&amp;z=13&amp;output=embed"></iframe><br /><small>View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=210032451350085210978.00049c59aa4d926ced4b2&amp;ll=32.873244,-117.249184&amp;spn=0.069203,0.109863&amp;z=13&amp;source=embed" style="color:#0000FF;text-align:left">Cytoscape Retreat and Symposium 2011</a> in a larger map</small>
 
   	<h3>Lodging Options</h3>
-	<ul>
-	<li><a href="http://www.ljshoreshotel.com/">The La Jolla Shores Hotel</a></li>
-	<li><a href="http://hdh.ucsd.edu/thevillage/">The Village</a> -- For guest accommodations on campus please <a href="https://hds.ucsd.edu/conference/GuestReg/guestinfo.aspx">click here</a>. Housing will be located at the newly opened Village at Torrey Pines East.  To make a reservation select the radio button "Conference" and type "Cytoscape Symposium" and proceed with the reservation.  Please view the Frequently Asked Questions for additional information or call 858-534-2142.</li>
-	</ul>
+	<h4><a href="http://www.ljshoreshotel.com/">The La Jolla Shores Hotel</a></h4>
+		<ul>
+		<li>$149 per night</li>
+		<li>Hotel Reservations Department at (800) 237-5211.</li>
+		<li>Please reference <i>Cytoscape Conference</i> when making reservations.</li>
+		<li>Reservations must be made before <i>April 8, 2011</i></li>
+		</ul>
+	<h4><a href="http://hdh.ucsd.edu/thevillage/">The Village</a> </h4>
+		<ul>
+		<li>$110 per night for a 4 room apartment</li>
+		<li>Various other "dorm-style" options</li>
+		<li> For guest accommodations on campus please <a href="https://hds.ucsd.edu/conference/GuestReg/guestinfo.aspx">click here</a>. Housing will be located at the newly opened Village at Torrey Pines East.  To make a reservation select the radio button "Conference" and type "Cytoscape Symposium" and proceed with the reservation.  Please view the Frequently Asked Questions for additional information or call 858-534-2142.</li>
+		</ul>
   	<h3>Transportation</h3>
 	<ul>
 	<li>The La Jolla Shores Hotel will provide a shuttle to the retreat site.</li>
@@ -50,6 +59,7 @@
 	<ul>
 	<li>Airport shuttle...</li>
 	<li>Taxi (~ $30-$40)</li>
+  	<h3><a href="http://blink.ucsd.edu/sponsor/blink/visitors.html">Visitor's Guide to UCSD</a></h3>
 	</ul>
 	</li>
 	</ul>
