--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
@@ -23,7 +23,7 @@
   <div id="nav">
     <div id="program" class="menu_item"><a href="program.html">
       <h3>Program <span class="lucida">&raquo;</span></h3>
-      <p>Schedule...</p>
+      <p>Program description and schedule...</p>
       </a>
     </div>
     <div id="travel" class="menu_item"><a href="travel.html">
@@ -38,11 +38,16 @@
     <div id="contact" class="menu_item_last"><a href="contact.html">
       <h3>Contact Us <span class="lucida">&raquo;</span></h3>
       <p>Contact information...</p>
+      </a>
     </div>
   </div>
   
   <div class="main_contents">
-  <!--Insert actual contests here. -->
+  	<br/>
+  	<br/>
+  	<br/>
+  	<br/>
+ 	<b>Sponsored by the <a href="http://nrnb.org">National Resource for Network Biology</a> and the <a href="http://sdcsb.org">San Diego Center for Systems Biology</a></b>
   </div>
   
   <div class="clear"></div>
