--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -42,6 +42,7 @@
 		<li>Hotel Reservations Department at (800) 237-5211.</li>
 		<li>Please reference <i>Cytoscape Conference</i> when making reservations.</li>
 		<li>Reservations must be made before <i>April 8, 2011</i></li>
+		<li>The hotel will provide a shuttle to the retreat.</li>
 		</ul>
 	<h4><a href="http://hdh.ucsd.edu/thevillage/">The Village</a> </h4>
 		<ul>
@@ -51,18 +52,16 @@
 		</ul>
   	<h3>Transportation</h3>
 	<ul>
-	<li>The La Jolla Shores Hotel will provide a shuttle to the retreat site.</li>
-	<li>You shouldn't need a car at the retreat.  We'll provide a continental 
-	 breakfast and boxed lunch on Thursday and Saturday.  There are also food
-	 options within walking distance of the retreat location.</li>
-	<li><b>From the Airport</b>
-	<ul>
-	<li>Airport shuttle...</li>
-	<li>Taxi (~ $30-$40)</li>
-  	<h3><a href="http://blink.ucsd.edu/sponsor/blink/visitors.html">Visitor's Guide to UCSD</a></h3>
-	</ul>
+	<li>You shouldn't need a car at the retreat.</li>  
+	<li><b>From the Airport</b> there are <a href="http://tinyurl.com/5usr58t">shuttle services</a> available or Taxi from the Airport should cost between $30 and $40. 
 	</li>
 	</ul>
+  	<h3>Dining</h3>
+	<ul>
+	<li> We'll provide a continental breakfast and boxed lunch on Thursday and Saturday.</li>
+	<li>There are also food (and coffee) options within walking distance of the retreat location.</li>
+	</ul>
+  	<h3>Visitor's <a href="http://blink.ucsd.edu/sponsor/blink/visitors.html">Guide</a> to UCSD</h3>
     
   </div>
   
