--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -43,6 +43,7 @@
 		<li>Please reference <i>Cytoscape Conference</i> when making reservations.</li>
 		<li>Reservations must be made before <i>April 8, 2011</i></li>
 		<li>The hotel will provide a shuttle to the retreat.</li>
+		<li>It would take 30-45 minutes to walk to the retreat site from the hotel.</li>
 		</ul>
 	<h4><a href="http://hdh.ucsd.edu/thevillage/">The Village</a> </h4>
 		<ul>
