--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
@@ -37,22 +37,26 @@
 <ul>
 <li>9am-5pm - Cytoscape 3.0 Developer's Q&amp;A Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
 <p>This will be an informal meeting for Cytoscape plugin authors to meet with the core Cytoscape developers to learn about the Cytoscape 3.0 architecture and to learn about porting their plugins. The discussions will likely be technical and of interest to developers only.</p>
+<p><i>This event will primarily be of interest to Cytoscape <b>developers</b>.</i></p>
 </ul>
 
 <h3>Thursday, May 19</h3>
 <ul>
 <li>9am-12pm - User Tutorial Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15A, 15B)</li>
 <p>We will present tutorials suitable for users of Cytoscape.</p>
+<p><i>This event will primarily be of interest to Cytoscape <b>users</b>.</i></p>
 <li>9am-12pm - Developer Tutorial Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 2C)</li>
 <p>We will present tutorials directed at plugin developers for Cytoscape.</p>
+<p><i>This event will primarily be of interest to Cytoscape <b>developers</b>.</i></p>
 <li>12-1pm - Lunch Catering (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
 <li>1-5pm - Plug-in Demo Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15A, 15B)</li>
 <p>We will have presentations by plugin authors demonstrating the latest and greatest plugins for Cytoscape.</p>
+<p><i>This event will be of interest to Cytoscape <b>users</b> and <b>developers</b>.</i></p>
 </ul>
 
 <h3>Friday, May 20</h3>
 <ul>
-<li>9am - 6:30pm - <a href="http://http://sdcsb.org/events/6th-annual-systems-to-synthesis-symposium">Systems To Synthesis Symposium</a> (<a href="http://www.salk.edu/about/directions.html">Salk Institute</a>, Fredric de Hoffman Auditorium)</li>
+<li>9am - 6:30pm - <a href="http://sdcsb.org/events/6th-annual-systems-to-synthesis-symposium">Systems To Synthesis Symposium</a> (<a href="http://www.salk.edu/about/directions.html">Salk Institute</a>, Fredric de Hoffman Auditorium)</li>
 </ul>
 
 <h3>Saturday, May 21</h3>
@@ -60,6 +64,7 @@
 <li>9am-12pm - <a href="http://nrnb.org">NRNB</a> Executive Advisory Committee Meeting (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15B)</li>
 <li>9am-12pm - Cytoscape Developers Meeting (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
 <p>This will be a meeting where we discuss technical aspects of Cytoscape development and plan our development for the coming year.</p>
+<p><i>This event will primarily be of interest to Cytoscape <b>developers</b>.</i></p>
 <li>12-1pm - Lunch Catering (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
 <li>1pm-TBD - Cytoscape Developers Meeting (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C) </li>
 </ul>
