added public transit info
git-svn-id: http://chianti.ucsd.edu/svn@24283 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -56,6 +56,7 @@
     <ul>
       <li>You shouldn't need a car at the retreat.</li>
       <li><b>From the Airport</b> there are <a href="http://tinyurl.com/5usr58t">shuttle services</a> available or Taxi from the Airport should cost between $30 and $40. </li>
+      <li><b>Public Transportation</b> The bus route nearest the La Jolla Shores hotel is <a href="http://sdmts.com/mtscr/Route.aspx?r=30">MTS Route 30</a>, and the route nearest the conference site is <a href="http://www.gonctd.com/pdf_breeze_routes_jan11/101_jan.pdf">NCTD route 101</a>.  These routes can be used to get to some places nearby and (with transfers) could be used to go further (such as downtown or the airport) - though be forewarned that this would take 1 hr+ depending on where you are going.  The NCTD system connects to the MTS system (#30 and #101 share several stops), and they take each others' fares. For more information, you can visit the <a href="http://www.sdmts.com/">MTS</a> or <a href="http://www.gonctd.com/">NCTD</a> sites - also, the Google Maps transit planner may be helpful if you want to use this.  The UCSD buses require a UCSD student/faculty ID.</li>
     </ul>
     <h3>Dining</h3>
     <ul>
