updated the EAC meeting time
git-svn-id: http://chianti.ucsd.edu/svn@24308 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
@@ -49,6 +49,7 @@
           <li>9am-12pm - Developer Tutorial Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 2C)</li>
           <p>We will present tutorials directed at plugin developers for Cytoscape. <br/>
             <i>This event will primarily be of interest to Cytoscape <b>developers</b>.</i></p>
+          <li>9am-12pm - <a href="http://nrnb.org">NRNB</a> Executive Advisory Committee Meeting (Location TBD)</li>
           <li>12-1pm - Lunch Catering (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
           <li>1-5pm - Plug-in Demo Session (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15A, 15B)</li>
           <p>We will have presentations by plugin authors demonstrating the latest and greatest plugins for Cytoscape.<br/>
@@ -64,7 +65,6 @@
       <div class="item">
         <h4>Day 4: Saturday, May 21</h4>
         <ul>
-          <li>9am-12pm - <a href="http://nrnb.org">NRNB</a> Executive Advisory Committee Meeting (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15B)</li>
           <li>9am-12pm - Cytoscape Developers Meeting (<a href="http://hdh.ucsd.edu/thevillage/images/Village_TobyTrashMap.pdf">The Village [building 1]</a> room 15C)</li>
           <p>This will be a meeting where we discuss technical aspects of Cytoscape development and plan our development for the coming year.<br/>
             <i>This event will primarily be of interest to Cytoscape <b>developers</b>.</i></p>
