pointed tutorials to open tutorials
git-svn-id: http://chianti.ucsd.edu/svn@24495 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/documentation_users.html
+++ b/new_cytoscape_website/trunk/documentation_users.html
@@ -24,8 +24,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       <h3>Tutorials</h3>
       
       <ul>  
-      	<li><a href="http://cytoscape.wodaklab.org/wiki/Presentations/Basic">Basic Tutorials</a></li>
-     	<li><a href="http://cytoscape.wodaklab.org/wiki/Presentations/Advanced">Advanced Tutorials</a></li>
+      	<li><a href="http://opentutorials.cgl.ucsf.edu/index.php/Portal:Cytoscape">Open Tutorials</a></li>
       </ul>
       
       <h3>Video Tutorial Series (Coming Soon)</h3>
