added links back to cytoscape.org
git-svn-id: http://chianti.ucsd.edu/svn@24729 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/contact.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/contact.html
@@ -32,10 +32,10 @@
   
   <div id="main_contents">
     <h3>Contact Information</h3>
-    <p>Please contact <a mailto="msmoot@ucsd.edu">Mike Smoot (msmoot@ucsd.edu)</a> with any questions.</p>
+    <p>Please contact <a mailto="ftrueblood@ucsd.edu">Cita Trueblood (ftrueblood@ucsd.edu)</a> with any questions.</p>
   </div>
   
-  <div id="footer"><small>Copyright &copy; 2011 Cytoscape Consortium.</small></div>
+  <div id="footer"><small>Copyright &copy; 2011 <a href="http://cytoscape.org">Cytoscape</a> Consortium.</small></div>
 </div>
 </body>
 </html>
