--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="wrap">
-  <div id="header"> <img src="images/title.png"/>
+  <div id="header"> <a href="http://cytoscape.org"><img src="images/title.png"/></a>
     <h1>Retreat and Symposium 2011</h1>
     <h4>May 18 - May 21, 2011  @ <a href="http://www.ucsd.edu/">University of California San Diego</a> & <a href="http://www.salk.edu/">Salk Institute</a><br />
       Sponsored by the <a href="http://nrnb.org">National Resource for Network Biology</a> and the <a href="http://sdcsb.org">San Diego Center for Systems Biology</a> </h4>
@@ -74,7 +74,7 @@
       </div>
     </div>
   </div>
-  <div id="footer"><small>Copyright &copy; 2011 Cytoscape Consortium.</small></div>
+  <div id="footer"><small>Copyright &copy; 2011 <a href="http://cytoscape.org">Cytoscape</a> Consortium.</small></div>
 </div>
 </body>
 </html>
