--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/program.html
@@ -74,7 +74,7 @@
       </div>
     </div>
   </div>
-  <div id="footer"><small>Copyright &copy; 2011 Cytoscape Consortium.</small></div>
+  <div id="footer"><small>Copyright &copy; 2011 <a href="http://cytoscape.org">Cytoscape</a> Consortium.</small></div>
 </div>
 </body>
 </html>
