--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/travel.html
@@ -67,7 +67,7 @@
     <h3><a href="http://blink.ucsd.edu/sponsor/blink/visitors.html">Visitor's Guide to UCSD</a></h3>
   </div>
   
-  <div id="footer"><small>Copyright &copy; 2011 Cytoscape Consortium.</small></div>
+  <div id="footer"><small>Copyright &copy; 2011 <a href="http://cytoscape.org">Cytoscape</a> Consortium.</small></div>
 </div>
 </body>
 </html>
