--- a/new_cytoscape_website/trunk/index.html
+++ b/new_cytoscape_website/trunk/index.html
@@ -137,6 +137,13 @@
         <p><strong>Cytoscape project needs your support!</strong>  
         Please cite either of the following papers when you use Cytoscape in your publications, which is very important to sustain our federal funding.</p>
         <div class="pub">
+          <div class="author"> Michael Smoot, Keiichiro Ono, Johannes Ruscheinski, Peng-Liang Wang, Trey Ideker </div>
+          <div class="title"> Cytoscape 2.8: new features for data integration and network visualization </div>
+          <div class="source"> Bioinformatics. 2011 February 1; 27(3): 431–432.Published online 2010 December 12.
+            </div>
+          <a href="http://www.ncbi.nlm.nih.gov/pubmed/21149340"> [PubMed
+          entry]</a> </div>
+        <div class="pub">
           <div class="author"> Melissa S Cline, Michael Smoot, Ethan Cerami,
             Allan Kuchinsky, Nerius Landys, Chris Workman, Rowan Christmas, Iliana
             Avila-Campilo, Michael Creech, Benjamin Gross, Kristina Hanspers, Ruth
