Fixed bug #2523: Rendering issue when using high resolution image as node background. Fixed issue with gaps between a node and its edges when the node border width changes.
git-svn-id: http://chianti.ucsd.edu/svn@24954 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/tests.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/tests.html
@@ -61,10 +61,17 @@
         vis1.ready(function() { runGraphTests("Vis-1", vis1, options1); });
         runJSTests(vis1);
 
-        $.get("fixtures/test1.graphml", function(xml){
-            options1.network = xml;
-            options1.layout = { name: "circle", options: {} };
-            vis1.draw(options1);
+        $.ajax({
+            url: "fixtures/test1.graphml",
+            dataType: "text",
+            success: function(xml){
+                options1.network = xml;
+                options1.layout = { name: "circle", options: {} };
+                vis1.draw(options1);
+            },
+            error: function(){
+                alert("Error loading file 1");
+            }
         });
         
         var options2 = {
@@ -77,9 +84,16 @@
         var vis2 = new org.cytoscapeweb.Visualization("cytoweb2", { resourceBundleUrl: "fixtures/bundle_test.properties" });
         vis2.ready(function() { runGraphTests("Vis-2", vis2, options2); });
 
-        $.get("fixtures/test2.xgmml", function(xml){
-            options2.network = xml;
-            vis2.draw(options2);
+        $.ajax({
+            url: "fixtures/test2.xgmml",
+            dataType: "text",
+            success: function(xml){
+                options2.network = xml;
+                vis2.draw(options2);
+            },
+            error: function(){
+                alert("Error loading file 2");
+            }
         });
     });
 </script>
